--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 <meta charset="UTF-8"/>
-<title>WeatherIconsMoe</title>
+<title>WeatherMoe</title>
 </head>
 <body>
 <p>sample</p>
