--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>WeatherMoe</title>
 </head>
 <body>
-<p>sample</p>
+<p><a href="https://forum.rainmeter.net/viewtopic.php?f=27&t=34524" target="_blank">WeatherMoe - Rainmeter Forum</a></p>
 </body>
 </html>
